kubernetes/cluster-0/apps/tekton/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    ingress.home.arpa/type: "internal"
spec:
  ingressClassName: nginx
  rules:
    - host: tekton.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
